# PerformanceModelling

./: .gitignore  CMakeLists.txt  common.h  ctypesTest.py  exports.DEF  main.cpp  matrix.cpp  matrix.h  perf.cu  perf.h  requirements.txt  tests.cpp
cuMPPM/: cu_mppm.py  gpu_direct_multiparameter_modeler.py
scripts/: python_usage.py
src/: main.cpp  perf.cu  perf.h
test/: tests.cpp
testdata/: five_parameter_1.txt  two_parameter_1.txt
tests/: four_parameter_1_converted.txt  one_parameter_1_converted.txt  one_parameter_4_converted.txt  one_parameter_5_converted.txt  one_parameter_7_converted.txt  synthetic-data4D.py  three_parameter_1_converted.txt  three_parameter_2_converted.txt  two_parameter_3_converted.txt
utils/: ctps_to_cpp.py  parse_extrap_input_2_simple_format.py  synthetic-data4D.py
